# embedded_template

./: .gitignore  CMakeLists.txt  README.md
Core/inc/: main.h
cmake/: keil_sync.py  n32g031_flash.ld  syscall.c  toolchain.cmake
keil/: keil.uvprojx
sdk/: CMakeLists.txt
sdk/cmsis/: CMakeLists.txt
sdk/cmsis-dsp/Source/: CMakeLists.txt
